--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
         <p>Ivy leagues receive a large amount of endowments every year.</p>
 
-        <p>Harvard University received a letter from a federal task force earlier in April outlining policy demands tied to nearly $9 billion in federal funding.<a href="https://www.reuters.com/world/us/harvard-plans-borrow-750-million-after-federal-funding-threats-2025-04-07/">Harvard University plans to borrow $750 million</a> from Wall Street as part of contingency preparations.</p>
+        <p>The Trump administration announced in March that it was reviewing approximately $256 million in federal contracts with Harvard, along with an additional $8.7 billion in what they called "multiyear grant commitments." The administration suggested that Harvard had failed to adequately address antisemitism on campus, though they didn't provide specific details about what actions the university should take to address their concerns.<a href="https://www.reuters.com/world/us/harvard-plans-borrow-750-million-after-federal-funding-threats-2025-04-07/">Harvard University plans to borrow $750 million</a> from Wall Street as part of contingency preparations.</p>
         
         <p>Harvard has the largest endowment of any US university, a $53 billion. All the seven ivies are among the top 20 colleges in the US which gather the largest endowments, except for the Brown University. </p>
 
