--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </p>
         </div>
         <div class="byline">
-            <p>By <a href="https://rashimishhra.github.io/rashiportweb/">Rashi Mishra</a></p>
+            <p>By <a href="https://rashimisra.github.io/rashiportweb/">Rashi Mishra</a></p>
         </div>
     </div>
     <div class="content">
