--- a/index.html
+++ b/index.html
@@ -142,7 +142,15 @@
         </p>
         <p>According to USA Facts, More than $6 billion is spent on the eight Ivy Leagues out of this total federal funds to the universities. These institutions form 8% of such funding and only 0.5 % of the total American universities.   
         </p>
+    </div>
 
+    <div class="content">
+        <figure>
+            <img src="kA3Np-columbia-has-the-highest-federal-funding-percentage-among-ivies.png">
+        </figure>
+    </div>
+
+    <div class="content">
 
         <p>Columbia University received about $1.3 billions of federal funds in the fiscal year 2023-24. This is the highest proportion of the  operating revenue among all the ivies. The university is highly dependent on the funds that it gets as part of patient care and net tuition fees. In March 2025, the Trump administration threatened the university with a cut of $400 million if it does not overhaul its protest policies, security practices and Middle Eastern, South Asian and African studies department. </p>
 
