--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <h1>Federal Cuts on Ivy Leagues: Why do they matter?</h1>
             <p class="subhead">Trump administration has threatened the US Universities to freeze more than $12 billions</p>
         </div>
-        <div class="image-credit">Image: Foreign Policy</div>
+        <div class="image-credit">Image Credits: Foreign Policy</div>
     </div>
     
     <div class="content">
