--- a/index.html
+++ b/index.html
@@ -234,19 +234,16 @@
 
         <div class="content">
             <p>The largest portion of this funding was allocated to research activities, with medical and STEM fields receiving the highest levels of support. This doesn't include indirect benefits to universities from federal student loan programs where payments go directly to students and not the institutions</p>
-            <p>According to USA Facts, More than $6 billion is spent on the eight Ivy Leagues out of this total federal funds to the universities. These institutions form 8% of such funding and only 0.5 % of the total American universities.   
+            <p>According to Congressional Budget Office, More than $6 billion is spent on the eight Ivy Leagues out of this total federal funds to the universities. These institutions form 8% of such funding and only 0.5 % of the total American universities.   
             </p>
-        </div>
-
-        <div class="content">
-            <figure>
-                <img src="kA3Np-columbia-has-the-highest-federal-funding-percentage-among-ivies.png">
-            </figure>
+        
         </div>
 
         <div class="content">
             <p>Columbia University received about $1.3 billions of federal funds in the fiscal year 2023-24. This is the highest proportion of the  operating revenue among all the ivies. The university is highly dependent on the funds that it gets as part of patient care and net tuition fees. In March 2025, the Trump administration threatened the university with a cut of $400 million if it does not overhaul its protest policies, security practices and Middle Eastern, South Asian and African studies department. </p>
+            <p>Columbia University relies most heavily on federal funding among Ivy League institutions, with federal dollars comprising 20% of its operating budget, followed by Princeton (18%), Cornell (16%), and Yale (15%), while Brown and Dartmouth both receive 12%, and Penn and Harvard are least dependent at just 11% each, despite Penn receiving the largest total federal allocation in absolute dollars.</p>
         </div>
+
 
         <div class="content">
             <figure>
